..
.. $Id$
..
.. HiveSplitter
.. Maintainer: Marcel Zoll

Release Notes
=============

March 24, 2017 Mike Richman (mike.d.richman@gmail.com)
--------------------------------------------------------------------
Release V00-02-04

July 1th, 2016 Alex Olivas (olivas@icecube.umd.edu)
--------------------------------------------------------------------
- now able to set the subevent stream name by hand


June 10th, 2016 Leif Radel (lraedel@icecube.wisc.edu)
--------------------------------------------------------------------
- HiveSplitter does not care about non-standard DOMs (strings 1-86,
  doms 1-64 are considered standard) in Geometry anymore.

  
April 3, 2015 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------
Release V00-02-01

- Recognize I3_TESTDATA

  -- Alex Olivas

- log_fatal if no G-frame has been passed before the first Q-frame
- Replace int by size_t to make compilers happy

  -- Marcel Zoll


December 9, 2014 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------
V00-02-00

- Corrected critical bug, which should make sure that the project no 
  longer gives different results on some systems. In function 
  BuilingDistanceMaps() a read-beyond-memory has been found when 
  evaluating the specified ring-limits. This caused sometimes (only on 
  certain platforms and only if it is a tuesday and a man in an ewok 
  costume stands outside) that the more rings were included, when DOMs 
  were to be evaluated for their causal connectivity. Even though this 
  weakens the separation power of the algorithm, in the practical 
  use-case the impact is not high, because the evaluation of the 
  connectivity with the different norms caught many of the cases where 
  this could have had impact.

  -- Marcel Zoll


April 23, 2014 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------
V00-01-01
